[package]
name = "ec2"
version = "0.1.0"
edition = "2021"
author = ["yuhao"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-ec2 = "0.17.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
anyhow = "1"
tracing = "0.1.36"
time = { version = "0.3", features = ["macros"] }
tracing-subscriber = {version = "0.3", features = ["time","local-time"]}